LOG New version 2.9.4

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "ganeti-2.6.0.tar.gz": c84aeb56688af5103301bbec8bf0ad90211f96e0
+  ganeti-2.9.4.tar.gz: 1da548b90d7b6fe0358e9f1ac805b282be37f4d6
